--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -7,13 +7,32 @@
   padding-top: 8rem;
   padding-bottom: 8rem;
   background: $primary;
+  background-image: url('../img/bg-desenzano.png');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  &__info{
+    color: $white;
+    font-size: 1rem;
+    text-transform: uppercase;
+
+    &-icon{
+      display: inline-block;
+      margin-right: 5px;
+      color: $primary;
+    }
+
+    &-location{
+      margin-left: 20px;
+    }
+  }
+
   h1 {
     font-size: 4rem;
     margin: 0;
     padding: 0;
+    color: $primary;
   }
   @media (min-width: 992px) {
     height: 100vh;
