--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -23,6 +23,13 @@ body {
   padding-bottom: 7.5rem;
 }
 
+@media (max-width: 992px) {
+  .content-section {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+}
+
 .content-section-heading h2 {
   font-size: 3rem;
 }
@@ -48,12 +55,6 @@ h6 {
 /* Map */
 .map {
   height: 30rem;
-}
-
-@media (max-width: 992px) {
-  .map {
-    height: 75%;
-  }
 }
 
 .map iframe {
@@ -121,6 +122,7 @@ h6 {
   margin: 0;
   padding: 0;
   color: #007acc;
+  text-shadow: -2px -2px 0 #FFF, 0 -2px 0 #FFF, 2px -2px 0 #FFF, 2px 0 0 #FFF, 2px 2px 0 #FFF, 0 2px 0 #FFF, -2px 2px 0 #FFF, -2px 0 0 #FFF;
 }
 
 @media (min-width: 992px) {
