--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -19,6 +19,13 @@ body {
   padding-bottom: 7.5rem;
 }
 
+@media(max-width: 992px) {
+  .content-section {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+}
+
 .content-section-heading {
   h2 {
     font-size: 3rem;
@@ -47,12 +54,6 @@ h6 {
 
 .map {
   height: 30rem;
-}
-
-@media(max-width: 992px) {
-  .map {
-    height: 75%;
-  }
 }
 
 .map iframe {
