--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -411,3 +411,21 @@ a:hover, a:focus, a:active {
 .gdprRequired {
   margin-bottom: 20px;
 }
+
+.countdown {
+  font-size: 2rem;
+  line-height: 2rem;
+  color: #fff;
+  text-shadow: -1px -1px 0 #007acc, 0 -1px 0 #007acc, 1px -1px 0 #007acc, 1px 0 0 #007acc, 1px 1px 0 #007acc, 0 1px 0 #007acc, -1px 1px 0 #007acc, -1px 0 0 #007acc;
+}
+
+.countdown__item {
+  display: inline-block;
+  padding: 20px;
+  text-transform: uppercase;
+}
+
+.countdown__item-label {
+  display: block;
+  text-transform: uppercase;
+}
