--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -92,8 +92,8 @@ h6 {
   display: table;
   width: 100%;
   height: auto;
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   background: #007acc;
   background-image: url("../img/bg-desenzano.png");
   background-position: center center;
@@ -417,6 +417,7 @@ a:hover, a:focus, a:active {
   line-height: 2rem;
   color: #fff;
   text-shadow: -1px -1px 0 #007acc, 0 -1px 0 #007acc, 1px -1px 0 #007acc, 1px 0 0 #007acc, 1px 1px 0 #007acc, 0 1px 0 #007acc, -1px 1px 0 #007acc, -1px 0 0 #007acc;
+  display: none;
 }
 
 .countdown__item {
@@ -428,4 +429,10 @@ a:hover, a:focus, a:active {
 .countdown__item-label {
   display: block;
   text-transform: uppercase;
+}
+
+@media (min-width: 992px) {
+  .countdown {
+    display: block;
+  }
 }
