--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -95,7 +95,7 @@ h6 {
   padding-top: 6rem;
   padding-bottom: 6rem;
   background: #007acc;
-  background-image: url("../img/bg-desenzano.png");
+  background-image: url("../img/bg-desenzano.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
