--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -7,7 +7,7 @@
   padding-top: 6rem;
   padding-bottom: 6rem;
   background: $primary;
-  background-image: url('../img/bg-desenzano.png');
+  background-image: url('../img/bg-desenzano.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
