css temporarely fixes no hamburger menu right now

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,3 +10,5 @@
 @import "section-call-for-paper";
 @import "section-code-of-conduct";
 
+@import "fixes"; // sorry, it was the "hurry up", we'll do i better... :-)
+
