--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,7 @@
 @import "section-map";
 @import "section-call-for-paper";
 @import "section-code-of-conduct";
+@import "section-media-partner";
 
 @import "fixes"; // sorry, it was the "hurry up", we'll do i better... :-)
 
