--- a/src/sass/_site-blocks.scss
+++ b/src/sass/_site-blocks.scss
@@ -74,7 +74,7 @@
 .speaker {
 	margin-bottom: 50px;
 	.name {
-		left: -80px;
+		//left: -80px;
 		position: relative;
 		@include media-breakpoint-down(lg) {
 			left: 0;
