--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
 @import "section-call-for-paper";
 @import "section-code-of-conduct";
 @import "section-media-partner";
+@import "section-sponsors";
 
 @import "fixes"; // sorry, it was the "hurry up", we'll do i better... :-)
 
